tests/compile-fail/dangling_pointers/wild_pointer_deref.stderr
error: Undefined Behavior: 0x2c is not a valid pointer
  --> $DIR/wild_pointer_deref.rs:3:22
   |
LL |     let x = unsafe { *p }; //~ ERROR 0x2c is not a valid pointer
   |                      ^^ 0x2c is not a valid pointer
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/wild_pointer_deref.rs:3:22

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

